[metadata]
name = codesleuth
version = 0.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Actively discover the primary coding languages of projects via introspection,
url = https://github.com/scivision/code-sleuth
keywords =
  language
  detection
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

[options.entry_points]
console_scripts =
  code_sleuth = codesleuth.__main__:code_sleuth
